[package]
name = "todo-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }

# serde_json is just for the example, not required in general
serde_json = "1.0"

hmac = "0.12.1"
sha2 = "0.10.2"
hex = "0.4.3"
jwt-simple= "*"
bcrypt= "*"
rand= "*"
slog= "*"



thiserror="*"
chrono={ version = "*", features = ["serde"] }
sqlx= { version = "*", features = ["postgres", 'runtime-async-std-native-tls', 'chrono'] }
async-std=  {version = "*", features = ["attributes"]}
futures = "*"

uuid={version="*", features = ["v4"]}
async-trait="*"